hphp/hack/test/typecheck/higher_kinded_types/tparam_name_shadowed.php
<?hh // strict

class Test1<T1<T2>, T2> {}


class Test2<T1<T1>, T2> {}
